test/errors/missing_constraint_in_generic/main.sk
module Main {

struct Foo {

}

trait Bar[T] {
    fn bar(&self) -> ()
}

pub instance FooImpl Bar[Foo] {
    fn bar(&self) -> () {

    }
}

fn generic[T](t: T) {
    t.bar();
}

fn main() {
    let f = Foo();
    generic(f);
}

}